<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/main_linear_layout_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:theme="@style/MyNewStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextFirstNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/standard_margin"
                android:layout_weight="1"
                android:autofillHints="numberDecimal"
                android:background="@android:color/darker_gray"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/first_num"
                android:inputType="numberDecimal"
                android:textSize="@dimen/main_text_size" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextSecondNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_weight="1"
                android:autofillHints="numberDecimal"
                android:background="@android:color/darker_gray"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/second_num"
                android:inputType="numberDecimal"
                android:textSize="@dimen/main_text_size" />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewResult"
            style="@style/MyNewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/text_view_result_margin_vertical"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/result"
            android:textSize="@dimen/main_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/buttons_margin_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPlus"
                style="@style/MyNewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/buttons_horizontal_margin"
                android:layout_weight="1"
                android:text="@string/button_plus_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonMinus"
                style="@style/MyNewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/buttons_horizontal_margin"
                android:layout_weight="1"
                android:text="@string/button_minus_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDivisionSign"
                style="@style/MyNewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/buttons_horizontal_margin"
                android:layout_weight="1"
                android:text="@string/button_division_sign_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonX"
                style="@style/MyNewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/buttons_horizontal_margin"
                android:layout_weight="1"
                android:text="@string/buttonX_text" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonClear"
            style="@style/MyNewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/result_button_horizontal_margin"
            android:text="@string/button_clear_text" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:text="@string/button_theme_switch_text" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>